...
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/email_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:textAppearance="?textAppearanceHeadline7"


...
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/email"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/pasword_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"

                                android:textAppearance="?textAppearanceHeadline7"

...
                            android:checked="@={viewModel.rememberMe}"


                            />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_login"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_medium"
                            app:layout_constraintTop_toBottomOf="@id/remember_me_checkbox"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
...
