...

            tools:text="Property saved to favorites"
            tools:visibility="visible"
            />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extended_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_gravity="bottom|end"

            app:marginBottomPlusInsets="@{@dimen/margin_small}"
...
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/coords"
                    style="?textAppearanceHeadline7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textAlignment="center"
                    android:textStyle="bold"
...
